# Genetic-programming-feature-learning

./: .gitignore  .main.cpp.swp  CMakeLists.txt  CustomNodeFunctions.cpp  CustomNodeFunctions.h  Image4CGP.cpp  Image4CGP.h  cgp.c  cgp.h  image_secator.ipynb  main.cpp
.ipynb_checkpoints/: image_secator-checkpoint.ipynb
wd_0/: coeffs.txt
wd_0/Chromosomes/: chromo1.txt  chromo10.txt  chromo11.txt  chromo12.txt  chromo2.txt  chromo3.txt  chromo4.txt  chromo5.txt  chromo6.txt  chromo7.txt  chromo8.txt  chromo9.txt
wd_0/Graphs/: graph1.dot  graph10.dot  graph11.dot  graph12.dot  graph2.dot  graph3.dot  graph4.dot  graph5.dot  graph6.dot  graph7.dot  graph8.dot  graph9.dot
wd_1/: coeffs.txt
wd_1/Chromosomes/: chromo1.txt  chromo10.txt  chromo2.txt  chromo3.txt  chromo4.txt  chromo5.txt  chromo6.txt  chromo7.txt  chromo8.txt  chromo9.txt
wd_1/Graphs/: graph1.dot  graph10.dot  graph2.dot  graph3.dot  graph4.dot  graph5.dot  graph6.dot  graph7.dot  graph8.dot  graph9.dot
